--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+@import "_color.scss";
+@import "_mixin.scss";
+@import "_variable.scss";
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
