--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
-@import "_color.scss";
-@import "_mixin.scss";
-@import "_variable.scss";
+@import "./color";
+@import "./mixin";
+@import "./variable";
 
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
